# rag-streamlit

./: .pre-commit-config.yaml  Makefile  app.py  pyproject.toml
core/: chunker.py  database.py  etl_engine.py  rag_engine.py
doc/: architecture.md  crc-cards.md  use-cases.md
doc/adrs/: architecture.md  data_modeling.md  data_pipeline.md  infrastructure.md  ui_state.md
pages/: 1_Data_Preparation.py
tests/: test_integration.py
