[project]
name = "task-classifier-rd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "hypothesis>=6.148.7",
    "llama-index-core>=0.14.19",
    "llama-index-embeddings-voyageai>=0.6.0",
    "llama-index-llms-anthropic>=0.11.2",
    "llama-index-postprocessor-voyageai-rerank>=0.5.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "todoist-api-python>=3.1.0",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "mutmut>=3.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (may use external resources)",
    "ui: marks tests as UI tests (requires Playwright and running app)",
    "slow: marks tests as slow running tests",
]
# REMOVED "--cov=src ..." from here. We will move it to the Makefile.
# This prevents coverage from running automatically when you just want to debug a single test.
addopts = "-v"

filterwarnings = [
    "ignore::ResourceWarning",
    # Silence the Pydantic warning we discussed earlier
    "ignore:Using `@model_validator` with mode='after' on a classmethod is deprecated:pydantic.warnings.PydanticDeprecatedSince20"
]

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "*/__init__.py",
    "tests/*",
    "*/__pycache__/*",
    "*/tests/*"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@abstractmethod"
]


[tool.mutmut]
paths_to_mutate = ["core/"]
tests_dir = ["tests/"]

# File Management - include all necessary files
also_copy = [
    "conftest.py",
    ".env",
    "core",
]

# Exclusions
do_not_mutate = [
    "**/migrations/*",
    "**/__pycache__/*",
    "tests/*"
]


# Performance
max_stack_depth = 8

pytest_flags = ["-x", "-q"]
mutate_only_covered_lines = true

# Debugging (set to false once working)
debug = true
backup = false
